Issue #210. Styling tweaks to align left margin.

--- a/src/css/_projects.scss
+++ b/src/css/_projects.scss
@@ -97,7 +97,7 @@ h2.wp-block-heading {
   margin-top: 4rem;
 }
 
-div.ds-content-layout {
-  padding-left: 10px;
-  padding-right: 10px;
-}
+// div.ds-content-layout {
+//   padding-left: 10px;
+//   padding-right: 10px;
+// }
